[package]
name = "snakeos"
version = "0.1.0"
edition = "2018"


[workspace]
members = [
    "boot",
]

[dependencies]
bootloader = { version = "0.10.6" }
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
x86_64 = { version = "0.14.2" }
volatile = "0.2.6"
uart_16550 = "*"
font8x8 = { version = "0.2.5", default-features = false, features = ["unicode"] }
pic8259 = "0.10.1"